repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__repositories__repositories_statistics_sorted_newest.snap
---
source: repology-webapp/tests/snapshot_tests/repositories.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: text/html
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 11570
---
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="utf-8">
	<meta name="viewport" content="width=device-width, initial-scale=1">

	<meta name="description" content="Multiple package repositories analyzer">
	<meta name="keywords" content="repository, package, packages, version">
	<meta name="author" content="Dmitry Marakasov">

	

	<title>Repository statistics - Repology</title>
	<link rel="stylesheet" href="/static/bootstrap.min.v3.3.7.8dc6d358477be27a.css">
	<link rel="stylesheet" href="/static/repology.v21.bb7b05a7b3bfbdb9.css">
	<link rel="icon" href="/static/repology.v1.6108dff405ea1a42.ico" sizes="16x16 32x32 64x64" type="image/x-icon">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology packages" href="/opensearch/project.xml">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology maintainers" href="/opensearch/maintainer.xml">
</head>
<body>


<div class="site-alert-outer">
	<div class="container site-alert-inner">
		<p><a href="https://repology.org/">repology.org</a> domain is back up, repology.amdmi3.ru will be discontinued on October 9th<p>
	</div>
</div>


<nav class="navbar navbar-default navbar-static-top">
	<div class="container">
		<div class="navbar-header">
			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#repology-navbar-collapse" aria-expanded="false">
				<span class="sr-only">Toggle navigation</span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
			</button>
			<a class="navbar-brand" href="/">
				<img alt="Repology" src="/static/repology40x40.v1.0ea026630d9180a2.png" width="40" height="40">
			</a>
		</div>

		<div class="collapse navbar-collapse" id="repology-navbar-collapse">
			<ul class="nav navbar-nav">
				<li><a href="/projects/">Projects</a></li>
				<li><a href="/maintainers/">Maintainers</a></li>
				<li class="active"><a href="/repositories/statistics">Repositories</a></li>
				<li><a href="/tools">Tools</a></li>
				<li><a href="/security/recent-cves">Security</a></li>
			</ul>
			<ul class="nav navbar-nav navbar-right">
				<li><a href="/news">News</a></li>
				<li><a href="/docs">Docs</a></li>
			</ul>
		</div>
	</div>
</nav>


<div class="container">
	
<div class="btn-group pageheader-right">
	<a href="/repositories/statistics" class="btn btn-default">Statistics</a>
	<a href="/repositories/packages" class="btn btn-default">Packages</a>
	<a href="/repositories/graphs" class="btn btn-default">Graphs</a>
	<a href="/repositories/updates" class="btn btn-default">Updates</a>
	<a href="/repositories/fields" class="btn btn-default">Fields</a>
</div>

	<h1 class="page-header">Repository statistics</h1>
</div>



<div class="container">

<div class="clearfix">
	<div class="dropdown pull-right">
		<button class="btn btn-default dropdown-toggle" type="button" id="statisticsSortMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
			Sort by
			<span class="caret"></span>
		</button>
		<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="statisticsSortMenu">
			<li><a href="/repositories/statistics">Name</a></li>
			<li><a href="/repositories/statistics/newest" class="active">Projects up to date</a></li>
			<li><a href="/repositories/statistics/pnewest">Percent projects up to date</a></li>
			<li><a href="/repositories/statistics/outdated">Projects outdated</a></li>
			<li><a href="/repositories/statistics/poutdated">Percent projects outdated</a></li>
			<li><a href="/repositories/statistics/total">Total projects</a></li>
			<li><a href="/repositories/statistics/nonunique">Non-unique projects</a></li>
			<li><a href="/repositories/statistics/vulnerable">Potentially vulnerable projects</a></li>
			<li><a href="/repositories/statistics/pvulnerable">Percent potentially vulnerable projects</a></li>
		</ul>
	</div>

	<p>Total projects known to repology: <b>0</b>, total individual packages: <b>0</b>.</p>

	<p>Note that sum of columns does not need to match total count, as there may be packages with different status for a single project in a repository. Percentages are also calculated differently.</p>

	<p>
		<a href="/repositories/statistics/newest?autorefresh=1" rel="nofollow">Enable</a> autorefresh.</p>
</div>

<div class="table-responsive">
<table class="table table-striped table-hover">
	<thead>
		<tr>
			<th class="text-right" rowspan="2">Repository</th>
			<th class="text-center" colspan="12">Projects</th>
			<th class="text-center" rowspan="2">Maintainers</th>
			<th class="text-center" rowspan="2">Problems</th>
		</tr>
		<tr>
			<th class="text-center" title="Total number of projects packaged in this repository">Total</th>
			<th class="text-center" title="Number of non-unique projects packaged in this repository">N/u</th>
			<th class="text-center" colspan="2">Newest</th>
			<th class="text-center" colspan="2">Outdated</th>
			<th class="text-center" colspan="2">Unique</th>
			<th class="text-center" colspan="2">Problematic</th>
			<th class="text-center" colspan="2">Potentially vulnerable</th>
		</tr>
	</thead>
	<tbody>
	
		<tr id="freebsd">
			<th class="text-right">
				<a href="/repository/freebsd">FreeBSD</a>
			</th>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=freebsd">0</a>
			</td>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=freebsd&#38;families=2-">0</a>
			</td>

			<td class="text-center version-cell version-big version-newest">
				<a href="/projects/?inrepo=freebsd&#38;newest=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-newest">-</td>

			<td class="text-center version-cell version-big version-outdated">
				<a href="/projects/?inrepo=freebsd&#38;outdated=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-outdated">-</td>

			<td class="text-center version-cell version-big version-unique">
			
				<a href="/projects/?inrepo=freebsd&#38;families=1">0</a>
			
			</td>
			<td class="text-center version-cell version-big version-unique">
			-</td>

			<td class="text-center version-cell version-big version-ignored">
				<a href="/projects/?inrepo=freebsd&#38;problematic=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-ignored">-</td>

			<td class="text-center">
				<a href="/projects/?inrepo=freebsd&#38;vulnerable=1">0</a>
			</td>
			<td class="text-center">-</td>

			<td class="text-center">?</td>

			<td class="text-center">0</td>
		</tr>
	
		<tr id="freshcode">
			<th class="text-right">
				<a href="/repository/freshcode">freshcode.club</a>
			</th>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=freshcode">0</a>
			</td>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=freshcode&#38;families=2-">0</a>
			</td>

			<td class="text-center version-cell version-big version-newest">
				<a href="/projects/?inrepo=freshcode&#38;newest=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-newest">-</td>

			<td class="text-center version-cell version-big version-outdated">
				<a href="/projects/?inrepo=freshcode&#38;outdated=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-outdated">-</td>

			<td class="text-center version-cell version-big version-unique">
			
				<a href="/projects/?inrepo=freshcode&#38;families=1">0</a>
			
			</td>
			<td class="text-center version-cell version-big version-unique">
			-</td>

			<td class="text-center version-cell version-big version-ignored">
				<a href="/projects/?inrepo=freshcode&#38;problematic=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-ignored">-</td>

			<td class="text-center">
				<a href="/projects/?inrepo=freshcode&#38;vulnerable=1">0</a>
			</td>
			<td class="text-center">-</td>

			<td class="text-center">?</td>

			<td class="text-center">0</td>
		</tr>
	
		<tr id="ubuntu_12">
			<th class="text-right">
				<a href="/repository/ubuntu_12">Ubuntu 12</a>
			</th>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=ubuntu_12">0</a>
			</td>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=ubuntu_12&#38;families=2-">0</a>
			</td>

			<td class="text-center version-cell version-big version-newest">
				<a href="/projects/?inrepo=ubuntu_12&#38;newest=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-newest">-</td>

			<td class="text-center version-cell version-big version-outdated">
				<a href="/projects/?inrepo=ubuntu_12&#38;outdated=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-outdated">-</td>

			<td class="text-center version-cell version-big version-unique">
			
				<a href="/projects/?inrepo=ubuntu_12&#38;families=1">0</a>
			
			</td>
			<td class="text-center version-cell version-big version-unique">
			-</td>

			<td class="text-center version-cell version-big version-ignored">
				<a href="/projects/?inrepo=ubuntu_12&#38;problematic=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-ignored">-</td>

			<td class="text-center">
				<a href="/projects/?inrepo=ubuntu_12&#38;vulnerable=1">0</a>
			</td>
			<td class="text-center">-</td>

			<td class="text-center">?</td>

			<td class="text-center">0</td>
		</tr>
	
		<tr id="ubuntu_24">
			<th class="text-right">
				<a href="/repository/ubuntu_24">Ubuntu 24</a>
			</th>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=ubuntu_24">0</a>
			</td>

			<td class="text-center total-cell">
				<a href="/projects/?inrepo=ubuntu_24&#38;families=2-">0</a>
			</td>

			<td class="text-center version-cell version-big version-newest">
				<a href="/projects/?inrepo=ubuntu_24&#38;newest=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-newest">-</td>

			<td class="text-center version-cell version-big version-outdated">
				<a href="/projects/?inrepo=ubuntu_24&#38;outdated=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-outdated">-</td>

			<td class="text-center version-cell version-big version-unique">
			
				<a href="/projects/?inrepo=ubuntu_24&#38;families=1">0</a>
			
			</td>
			<td class="text-center version-cell version-big version-unique">
			-</td>

			<td class="text-center version-cell version-big version-ignored">
				<a href="/projects/?inrepo=ubuntu_24&#38;problematic=1">0</a>
			</td>
			<td class="text-center version-cell version-big version-ignored">-</td>

			<td class="text-center">
				<a href="/projects/?inrepo=ubuntu_24&#38;vulnerable=1">0</a>
			</td>
			<td class="text-center">-</td>

			<td class="text-center">?</td>

			<td class="text-center">0</td>
		</tr>
	
	</tbody>
</table>
</div>

</div>


<footer class="footer">
	<div class="container">
		<p class="pull-right footer-links">
			GitHub repositories:
			<a href="https://github.com/repology/repology-rs/tree/master/repology-webapp">webapp</a>,
			<a href="https://github.com/repology/repology-updater">updater</a>,
			<a href="https://github.com/repology/repology-rules">ruleset</a>
		</p>
		<p>
			Copyright (C) 2016-2026 Dmitry Marakasov<br>
			Code licensed under GPLv3+.
			
		</p>
	</div>
</footer>

<script src="/static/jquery-3.7.1.min.cc6904672d4db9a3.js"></script>
<script src="/static/bootstrap.min.v3.3.7.66502a3c5769c640.js"></script>
<script src="/static/moment.min.v2.29.2.b7efa16ed0d164d6.js"></script>
<script src="/static/repology.v2.ee0228ab3d88406f.js"></script>

</body>
</html>
